--- a/src/ApiGateways/Shopping.Aggregator/Properties/launchSettings.json
+++ b/src/ApiGateways/Shopping.Aggregator/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:11164",
+      "applicationUrl": "http://localhost:40919",
       "sslPort": 0
     }
   },
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Ordering.API": {
+    "Shopping.Aggregator": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
@@ -25,7 +25,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "http://localhost:5004"
+      "applicationUrl": "http://localhost:5005"
     },
     "Docker": {
       "commandName": "Docker",
