--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -6,14 +6,26 @@
     "DiscountUrl": "http://localhost:5003"
   },
   "EventBusSettings": {
-    "HostAddress" :  "amqp://guest:guest@localhost:5672"
+    "HostAddress": "amqp://guest:guest@localhost:5672"
   },
-  "Logging": {
-    "LogLevel": {
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft": "Warning",
+  //    "Microsoft.Hosting.Lifetime": "Information"
+  //  }
+  //},
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
     }
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
   },
   "AllowedHosts": "*"
 }
