--- a/src/WebApps/AspnetRunBasics/appsettings.json
+++ b/src/WebApps/AspnetRunBasics/appsettings.json
@@ -2,12 +2,26 @@
   "ApiSettings": {
     "GatewayAddress": "http://localhost:8010"
   },
-  "Logging": {
-    "LogLevel": {
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft": "Warning",
+  //    "Microsoft.Hosting.Lifetime": "Information",
+  //    "system.Net.Http.HttpClient": "Warning",
+  //    "AspnetEunBasics": "Debug"
+  //  }
+  //},
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
     }
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
   },
   "AllowedHosts": "*"
 }
